[Jason Dictionary] - Refactor Code

--- a/jason-product/jason-dictionary-translation/src/main/resources/static/index.html
+++ b/jason-product/jason-dictionary-translation/src/main/resources/static/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <p>
-    Currently Support the following:
-<li>getTranslation&word=</li>  <br>
-<li>count</li>
+    <strong> Currently Support the following</strong>
+<li>getTranslation&word= -- Get the translation of a word</li>  <br>
+<li>count -- The total word number in the dictionary</li><br>
+<li>startTranslationSpider -- Spider task to read from the default file and fetch translation from google</li>
 
 </body>
 </html>
