[Jason Dictionary] - Pronunciation Spider Task

--- a/jason-product/jason-dictionary-pronunciation/src/main/resources/static/index.html
+++ b/jason-product/jason-dictionary-pronunciation/src/main/resources/static/index.html
@@ -8,6 +8,7 @@
 
 Currently supported: <br>
 getPronunciation&word=
+startPronunciationSpider -- A spider task to fetch new pronunciations from a list of words.
 
 </body>
 </html>
