--- a/jason-product/jason-dictionary-translation/src/main/resources/static/index.html
+++ b/jason-product/jason-dictionary-translation/src/main/resources/static/index.html
@@ -5,13 +5,13 @@
     <title>Jason Translation</title>
 </head>
 <body>
-<p>
-    <strong> Currently Support the following</strong>
-<li>getTranslation&word= -- Get the translation of a word</li>  <br>
+<p><strong> Currently Support the following</strong>
+<li>getTranslation?word= -- Get the translation of a word</li>  <br>
 <li>getNewTranslations -- Get all the new translations</li>  <br>
 <li>deleteTranslation&word= -- Delete a translation</li><br>
 <li>count -- The total word number in the dictionary</li><br>
 <li>startTranslationSpider -- Spider task to read from the default file and fetch translation from google</li>
+<li>newTranslation -- A Put Request with word and translation</li>
 
 </body>
 </html>
