[Jason Dictionary] - Add docker compose

--- a/jason-product/jason-dictionary-pronunciation/src/main/resources/static/index.html
+++ b/jason-product/jason-dictionary-pronunciation/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <body>
 
 Currently supported: <br>
-getPronunciation&word=
+getPronunciation?word=
 startPronunciationSpider -- A spider task to fetch new pronunciations from a list of words.
 
 </body>
