[Jason Birthday Service] - Docker Improvment

--- a/jason-product/jason-birthday/src/main/resources/static/index.html
+++ b/jason-product/jason-birthday/src/main/resources/static/index.html
@@ -6,12 +6,8 @@
 </head>
 <body>
 <p><strong> Currently Support the following</strong>
-<li>getTranslation?word= -- Get the translation of a word</li>  <br>
-<li>getNewTranslations -- Get all the new translations</li>  <br>
-<li>deleteTranslation -- Delete a translation, parameter is word, DELETE</li><br>
-<li>count -- The total word number in the dictionary</li><br>
-<li>startTranslationSpider -- Spider task to read from the default file and fetch translation from google</li>
-<li>newTranslation -- A Put Request with word and translation, parameter is word and translation, PUT method</li>
+<li>allRelatives</li>  <br>
+
 
 </body>
 </html>
