[Jason Dictionary] - Pronunciation Started

--- a/jason-product/jason-birthday/src/main/resources/static/index.html
+++ b/jason-product/jason-birthday/src/main/resources/static/index.html
@@ -5,9 +5,7 @@
     <title>Jason Translation</title>
 </head>
 <body>
-<p><strong> Currently Support the following</strong>
+<p><h2> Currently Support the following</h2>
 <li>allRelatives</li>  <br>
-
-
 </body>
 </html>
