--- a/jason-product/jason-dictionary-pronunciation/src/main/resources/static/index.html
+++ b/jason-product/jason-dictionary-pronunciation/src/main/resources/static/index.html
@@ -5,10 +5,10 @@
     <title>Jason Pronunciation</title>
 </head>
 <body>
-
-Currently supported: <br>
-getPronunciation?word=
-startPronunciationSpider -- A spider task to fetch new pronunciations from a list of words.
+<p>
+<h2>Currently supported: </h2> <br>
+<li>getPronunciation?word=</li> <br>
+<li>startPronunciationSpider -- A spider task to fetch new pronunciations from a list of words.</li> <br>
 
 </body>
 </html>
