--- a/jason-product/jason-dictionary-translation/src/main/resources/static/index.html
+++ b/jason-product/jason-dictionary-translation/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <title>Jason Translation</title>
 </head>
 <body>
-<p><strong> Currently Support the following</strong>
+<p><h2> Currently Support the following</h2>
 <li>getTranslation?word= -- Get the translation of a word</li>  <br>
 <li>getNewTranslations -- Get all the new translations</li>  <br>
 <li>deleteTranslation -- Delete a translation, parameter is word, DELETE</li><br>
