[Jason Product] - Format Code & Standarlize Rest

--- a/jason-product/jason-dictionary-pronunciation/src/main/resources/static/index.html
+++ b/jason-product/jason-dictionary-pronunciation/src/main/resources/static/index.html
@@ -7,8 +7,10 @@
 <body>
 <p>
 <h2>Currently supported: </h2> <br>
-<li>getPronunciation?word=</li> <br>
-<li>startPronunciationSpider -- A spider task to fetch new pronunciations from a list of words.</li> <br>
+<li>getPronunciation?word=</li>
+<br>
+<li>startPronunciationSpider -- A spider task to fetch new pronunciations from a list of words.</li>
+<br>
 
 </body>
 </html>
