[Jason Dictionary Pronunciation] - Improve Rest service & util

--- a/jason-product/jason-dictionary-pronunciation/src/main/resources/static/index.html
+++ b/jason-product/jason-dictionary-pronunciation/src/main/resources/static/index.html
@@ -7,9 +7,11 @@
 <body>
 <p>
 <h2>Currently supported: </h2> <br>
-<li>getPronunciation?word=</li>
+<li>get/{word}</li>
 <br>
-<li>startPronunciationSpider -- A spider task to fetch new pronunciations from a list of words.</li>
+<li>get/countAll</li>
+<br>
+<li>task/start -- A spider task to fetch new pronunciations from a list of words.</li>
 <br>
 
 </body>
