--- a/jason-product/jason-dictionary-translation/src/main/resources/static/index.html
+++ b/jason-product/jason-dictionary-translation/src/main/resources/static/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <p><h2> Currently Support the following</h2>
-<li>getTranslation?word= -- Get the translation of a word</li>  <br>
-<li>getNewTranslations -- Get all the new translations</li>  <br>
-<li>deleteTranslation -- Delete a translation, parameter is word, DELETE</li><br>
-<li>count -- The total word number in the dictionary</li><br>
-<li>startTranslationSpider -- Spider task to read from the default file and fetch translation from google</li>
-<li>newTranslation -- A Put Request with word and translation, parameter is word and translation, PUT method</li>
+<li>get/{word} -- Get the translation of a word</li>  <br>
+<li>get/newWords -- Get all the new translations</li>  <br>
+<li>get/countAll -- The total word number in the dictionary</li><br>
+<li>delete/{word} -- Delete request - Delete a translation, parameter is word, DELETE</li><br>
+<li>add -- Put Request - Add a word and translation, parameter is word and translation</li>
+<li>task/start -- Spider task to read from the default file and fetch translation from google</li>
 
 </body>
 </html>
