[Dictionary] - Refactor - Make read a micro service with AWS

--- a/jason-product/dictionary-read-aws/README.html
+++ b/jason-product/dictionary-read-aws/README.html
@@ -111,7 +111,7 @@ GRIDS
 
 <div>
 
-<h1>Welcome to AWS Lambda Eclipse Plugin</h1>
+<h1>Dictionary Read</h1>
 
 <p><strong>Congratulations</strong>! You have created your first AWS Lambda project. So what's next?</p>
 
